--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   # Push Notifications & Auth
   firebase_messaging: ^15.1.3
   local_auth: ^2.2.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
