--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         cd FrontEnd/web
         npm run build
+      env:
+        CI: false
         
     - name: Setup Pages
       uses: actions/configure-pages@v4
