--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -7,6 +7,11 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
   flutter: ">=3.10.0"
 
+# Error reporting and analytics
+dependency_overrides:
+  # Ensure compatibility across packages
+  meta: ^1.9.1
+
 dependencies:
   flutter:
     sdk: flutter
