--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,17 @@ version: "3.9"
 services:
   postgres:
     image: postgres:16
+    restart: unless-stopped
     environment:
       POSTGRES_PASSWORD: postgres
+      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
     ports: [ "5432:5432" ]
     volumes: [ "pgdata:/var/lib/postgresql/data" ]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   pgbouncer:
     image: bitnami/pgbouncer:1
@@ -18,10 +25,12 @@ services:
 
   redis:
     image: redis:7
+    restart: unless-stopped
     ports: [ "6379:6379" ]
 
   minio:
     image: minio/minio:RELEASE.2024-10-13T00-00-00Z
+    restart: unless-stopped
     command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: minio
@@ -31,6 +40,7 @@ services:
 
   api:
     build: ./BackEnd/api
+    restart: unless-stopped
     environment:
       DATABASE_URL: "postgres://postgres:postgres@pgbouncer:6432/postgres"
       JWT_ACCESS_SECRET: "dev_access"
@@ -42,11 +52,23 @@ services:
       S3_SECRET_KEY: "minio123"
       NODE_ENV: "development"
       SENTRY_DSN: ""  # Add your Sentry DSN for error tracking
-    depends_on: [ pgbouncer, minio, redis ]
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      minio:
+        condition: service_started
     ports: [ "8080:8080" ]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   mailhog:
     image: mailhog/mailhog
+    restart: unless-stopped
     ports: [ "8025:8025" ]
 
 volumes: { pgdata: {}, minio: {} }
