--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -12,8 +12,29 @@ spec:
         image: ghcr.io/devforgesolutions/devforge-api:latest
         ports: [ { containerPort: 8080 } ]
         envFrom: [ { secretRef: { name: api-secrets } } ]
-        readinessProbe: { httpGet: { path: /api/health/healthz, port: 8080 }, initialDelaySeconds: 5, periodSeconds: 10 }
-        livenessProbe:  { httpGet: { path: /api/health/healthz, port: 8080 }, initialDelaySeconds: 10, periodSeconds: 20 }
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+        readinessProbe: 
+          httpGet: 
+            path: /api/health/healthz
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /api/health/healthz
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 5
+          failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
