--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -22,7 +22,7 @@ services:
     restart: unless-stopped
     ports: ["3000:3000"]
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin123
+      GF_SECURITY_ADMIN_PASSWORD: admin123
     volumes:
       - grafana-storage:/var/lib/grafana
 
