--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,43 @@
 name: CI
 on:
   push:
-    paths: ['BackEnd/**']
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   api:
+    name: Build & Push API
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    timeout-minutes: 20
+    permissions: { contents: read, packages: write }
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Registry login
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v6
+
+      - name: Build & push with cache
+        uses: docker/build-push-action@v6
         with:
           context: ./BackEnd/api
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/devforge-api:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+        continue-on-error: false
+        
+      - name: Verify build
+        if: success()
+        run: echo "Build completed successfully"
