--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -3,39 +3,26 @@ kind: Deployment
 metadata: { name: api, namespace: devforge }
 spec:
   replicas: 2
+  revisionHistoryLimit: 3
   selector: { matchLabels: { app: api } }
   template:
     metadata: { labels: { app: api } }
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1001
       containers:
       - name: api
         image: ghcr.io/devforgesolutions/devforge-api:latest
-        imagePullPolicy: Always
-        ports: [ { containerPort: 8080 } ]
-        envFrom: [ { secretRef: { name: api-secrets } } ]
+        ports: [{ containerPort: 8080 }]
         resources:
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
-        readinessProbe: 
-          httpGet: 
-            path: /api/health/healthz
-            port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
-        livenessProbe:
-          httpGet:
-            path: /api/health/healthz
-            port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 20
-          timeoutSeconds: 5
-          failureThreshold: 3
+          requests: { cpu: "100m", memory: "128Mi" }
+          limits:   { cpu: "500m", memory: "512Mi" }
+        livenessProbe:  { httpGet: { path: /api/health/healthz, port: 8080 }, initialDelaySeconds: 30, periodSeconds: 20, timeoutSeconds: 5 }
+        readinessProbe: { httpGet: { path: /api/health/healthz, port: 8080 }, initialDelaySeconds: 10, periodSeconds: 15, timeoutSeconds: 5 }
+        startupProbe:   { httpGet: { path: /api/health/healthz, port: 8080 }, failureThreshold: 10, periodSeconds: 10, timeoutSeconds: 5 }
+        securityContext:
+          readOnlyRootFilesystem: true
 ---
 apiVersion: v1
 kind: Service
